--- a/arch/arm64/boot/dts/pxa1936-fpga.dts
+++ b/arch/arm64/boot/dts/pxa1936-fpga.dts
@@ -865,4 +865,13 @@
 		pinctrl-2 = <&gnss_pmx_def2>;
 		status = "okay";
 	};
+
+	smc91x: smc91x@80000300 {
+		compatible = "smsc,lan91c111";
+		reg = <0x80000300 0xffcff>;
+		interrupts = <0 63 0x1>;
+		rst_gpio = <&gpio 3 0>;
+		clksrc = "smc91x";
+		status = "okay";
+	};
 };
