arm64: dts: use pm80x vbus driver for pxa1936 DKB
we use 88pm860 to do usb id detection

Change-Id: I1c1581d1c5b0116fd6521a7f9d84b6abddf8cead
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/88pm8xx.dtsi
+++ b/arch/arm64/boot/dts/88pm8xx.dtsi
@@ -56,4 +56,8 @@
 		  compatible = "marvell,88pm8xx-dvc";
 		  status = "disabled";
 	};
+	vbus {
+		  compatible = "marvell,88pm80x-usb";
+		  status = "disabled";
+	};
 };
