--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -148,6 +148,10 @@
 				status = "okay";
 			};
 
+			adma1: adma@d128d900 {
+				status = "okay";
+			};
+
 			ccic1: ccic@d420a000 {
 				pinctrl-names = "default","twsi","sccb";
 				pinctrl-0 = <&ccic1_pmx_func1>;
@@ -625,7 +629,6 @@
 					>;
 					DS_MEDIUM;PULL_NONE;EDGE_NONE;LPM_NONE;
 				};
-
 				sspa1_func: sspa1_func {
 					pinctrl-single,pins = <
 						GPIO25 AF7
@@ -945,31 +948,43 @@
 				pinctrl-names = "default";
 				pinctrl-0 = <&sspa0_func>;
 				playback_period_bytes = <4096>;
-				playback_buffer_bytes = <16384>;
+				playback_buffer_bytes = <12288>;
 				capture_period_bytes = <4096>;
-				capture_buffer_bytes = <12288>;
+				capture_buffer_bytes = <8192>;
 				burst_size = <4>;
+				sleep_vol = <850>;
+				#dailink-cells = <1>;
+				status = "okay";
+			};
+
+			/* SSPA port 1 */
+			sspa1: sspa@d128dd00 {
+				pinctrl-names = "default";
+				pinctrl-0 = <&sspa1_func>;
+				playback_period_bytes = <16384>;
+				playback_buffer_bytes = <32768>;
+				capture_period_bytes = <4096>;
+				capture_buffer_bytes = <8192>;
+				burst_size = <4>;
+				sleep_vol = <850>;
 				#dailink-cells = <1>;
 				status = "okay";
 			};
 
 			map: map@d1200000 {
 				marvell,b0_fix;
-				marvell,apll = <1>;
-				status = "okay";
+				marvell,apll = <0>;
+				status = "disabled";
 				mmp_map_codec: mmp_map_codec {
 					compatible = "marvell,mmp-map-codec";
 					#dailink-cells = <1>;
 				};
 				mmp_map_be: mmp_map_be {
 					compatible = "marvell,mmp-map-be";
-					pinctrl-names = "default";
-					pinctrl-0 = <&sspa1_func>;
 					#dailink-cells = <1>;
 				};
 				mmp_map_be_tdm: mmp_map_be_tdm {
 					compatible = "marvell,mmp-map-be-tdm";
-					marvell,single-out;
 					#dailink-cells = <1>;
 				};
 			};
@@ -1020,18 +1035,27 @@
 
 	sound {
 		compatible = "marvell,map-card";
+		status = "disabled";
 		map,dapm-route =
 			"ADC input1", "TDM_MIC1_CAP",
 			"ADC input2", "TDM_MIC2_CAP",
 			"ADC input3", "BT_VC_UL",
-			"TDM_OUT1_PLAYBACK", "out1_hs_en",
-			"TDM_OUT2_PLAYBACK", "out1_spkr_en",
+			"TDM_OUT1_PLAYBACK", "DAC1 output out1",
+			"TDM_OUT2_PLAYBACK", "DAC2 output out2",
 			"BT_VC_DL", "ADC output ain3";
 		fe_i2s1: fe_i2s1 {
 			compatible = "marvell,map-dailink-1";
 			dai-name = "MAP I2S1 audio";
 			stream-name = "map i2s1";
 			marvell,cpu-dai = <&sspa0 0>;
+			marvell,codec-dai = <&mmp_map_codec 1>;
+			marvell,dai-dynamic;
+		};
+		fe_i2s2: fe_i2s2 {
+			compatible = "marvell,map-dailink-1";
+			dai-name = "MAP I2S4 audio";
+			stream-name = "map i2s4";
+			marvell,cpu-dai = <&sspa1 1>;
 			marvell,codec-dai = <&mmp_map_codec 4>;
 			marvell,dai-dynamic;
 		};
@@ -1048,7 +1072,7 @@
 			compatible = "marvell,map-dailink-1";
 			dai-name = "MAP I2S3 audio";
 			stream-name = "map i2s3";
-			marvell,cpu-dai = <&mmp_pcm_hostless 0>;
+			marvell,cpu-dai = <&mmp_pcm_hostless 1>;
 			marvell,codec-dai = <&mmp_map_codec 3>;
 			marvell,dai-dynamic;
 			marvell,dai-no-host-mode;
@@ -1068,7 +1092,7 @@
 			compatible = "marvell,map-dailink-6";
 			dai-name = "MAP TDM hs audio";
 			stream-name = "codec hs audio";
-			marvell,cpu-dai = <&mmp_map_be_tdm 1>;
+			marvell,cpu-dai = <&mmp_map_be_tdm 2>;
 			marvell,codec-dai = <&pm860_codec 3>;
 			marvell,playback-only;
 			marvell,dai-no-pcm;
@@ -1078,7 +1102,7 @@
 			compatible = "marvell,map-dailink-4";
 			dai-name = "MAP TDM speaker audio";
 			stream-name = "codec speaker audio";
-			marvell,cpu-dai = <&mmp_map_be_tdm 2>;
+			marvell,cpu-dai = <&mmp_map_be_tdm 1>;
 			marvell,codec-dai = <&pm860_codec 4>;
 			marvell,playback-only;
 			marvell,dai-no-pcm;
