arm64: dts: add broadcast timer support for pxa1936
timer0/1 are configured as per-cpu timer in pxa1936.dtsi,
they are specially for pxa1088. pxa1936 don't need the soc
timer as per-cpu timer, only need a broadcast timer.
This patch enable timer2 as broadcast timer.

Change-Id: I48daf228076eea795b7f37e2014be12d3520b598
Signed-off-by: Leo Song <liangs@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -355,6 +355,10 @@
 				status = "disabled";
 			};
 
+			timer2: timer@d401f000 {
+				status = "okay";
+			};
+
 			edgewakeup: edgewakeup@d4019800 {
 				status = "okay";
 			};
