--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -1236,8 +1236,11 @@
 	mmp_m3_1: apsenhb {
 		compatible = "marvell,mmp-m3";
 		pmicver = <2>;
+		/* 950000 for CM3 on, 700000 for CM3 off */
+		vccmain = <950000 700000>;
 		vm3pwr-supply = <&ldo3>;
 		antpwr-supply = <&ldo4>;
+		vccmain-supply = <&vccmain>;
 
 		pinctrl-names = "default", "poweron";
 		pinctrl-0 = <&gnss_pmx_def>;
@@ -1248,9 +1251,12 @@
 	mmp_m3_2: cm3senhb {
 		compatible = "marvell,mmp-m3";
 		pmicver = <2>;
+		/* 950000 for CM3 on, 700000 for CM3 off */
+		vccmain = <950000 700000>;
 		vm3pwr-supply = <&ldo3>;
 		antpwr-supply = <&ldo4>;
 		senpwr-supply = <&ldo4>;
+		vccmain-supply = <&vccmain>;
 
 		pinctrl-names = "default", "poweron";
 		pinctrl-0 = <&gnss_pmx_def &twsi3_pmx_senhb_def &senhb_irq_pins_def>;
