--- a/arch/arm64/boot/dts/pxa1936-fpga.dts
+++ b/arch/arm64/boot/dts/pxa1936-fpga.dts
@@ -435,30 +435,24 @@
 					MFP_DEFAULT;
 				};
 
-				gnss_pmx_def1: gnss_pmx_def1 {
+				gnss_pmx_def: gnss_pmx_def {
 					pinctrl-single,pins = <
-						ND_IO11 AF1
-						ND_IO12 AF1
-						ND_IO13 AF1
-						ND_IO15 AF1
+						GPIO81 AF0
+						GPIO82 AF0
+						GPIO83 AF0
+						GPIO84 AF0
+						GPIO85 AF0
 					>;
 					MFP_LPM_PULL_DW;
 				};
 
-				gnss_pmx_def2: gnss_pmx_def2 {
-					pinctrl-single,pins = <
-						ND_IO14 AF0
-					>;
-					MFP_LPM_FLOAT;
-				};
-
 				gnss_pmx_power_on: gnss_pmx_power_on {
 					pinctrl-single,pins = <
-						ND_IO11 AF5
-						ND_IO12 AF5
-						ND_IO13 AF5
-						ND_IO14 AF5
-						ND_IO15 AF5
+						GPIO81 AF6
+						GPIO82 AF6
+						GPIO83 AF6
+						GPIO84 AF6
+						GPIO85 AF6
 					>;
 					MFP_DEFAULT;
 				};
@@ -467,7 +461,7 @@
 					pinctrl-single,pins = <
 						GPIO11 AF0
 						GPIO10 AF0
-						ND_IO10 AF5
+						GPIO91 AF3
 					>;
 					MFP_DEFAULT;
 				};
@@ -848,21 +842,21 @@
 
 	mmp_m3_1: apsenhb {
 		compatible = "marvell,mmp-m3";
+		pmicver = <2>;
 
-		pinctrl-names = "default", "poweron", "unfuse_en_d2";
-		pinctrl-0 = <&gnss_pmx_def1 &gnss_pmx_def2>;
+		pinctrl-names = "default", "poweron";
+		pinctrl-0 = <&gnss_pmx_def>;
 		pinctrl-1 = <&gnss_pmx_power_on>;
-		pinctrl-2 = <&gnss_pmx_def2>;
 		status = "okay";
 	};
 
 	mmp_m3_2: cm3senhb {
 		compatible = "marvell,mmp-m3";
+		pmicver = <2>;
 
-		pinctrl-names = "default", "poweron", "unfuse_en_d2";
-		pinctrl-0 = <&gnss_pmx_def1 &gnss_pmx_def2 &twsi3_pmx_senhb_def &senhb_irq_pins_def>;
+		pinctrl-names = "default", "poweron";
+		pinctrl-0 = <&gnss_pmx_def &twsi3_pmx_senhb_def &senhb_irq_pins_def>;
 		pinctrl-1 = <&gnss_pmx_power_on &twsi3_pmx_senhb>;
-		pinctrl-2 = <&gnss_pmx_def2>;
 		status = "okay";
 	};
 
