arm64: dts: add ldo control for synaptics touch on Helan3
Add member ldo in synaptics touch device node for Helan3.

Change-Id: Ie890ef9a7e81c3ecb44fb3d9930ff092ac20e067
Signed-off-by: Leilei Shang <shangll@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -861,6 +861,7 @@
 					synaptics,sensor_max_y = <1392>;
 					synaptics,sensor_margin_x = <39>;
 					synaptics,sensor_margin_y = <0>;
+					avdd-supply = <&ldo13>;
 				};
 
 				touch2: s3202@1080p {
@@ -879,6 +880,7 @@
 					synaptics,sensor_max_y = <2070>;
 					synaptics,sensor_margin_x = <0>;
 					synaptics,sensor_margin_y = <0>;
+					avdd-supply = <&ldo13>;
 				};
 			};
 
