arm64: dts: add td043mgea1 panel device node for helan3 fpga
Add panel device node for helan3 fpga.

Change-Id: If15d9537add70c31f4850f236e04f04103912d20
Signed-off-by: Yonghai Huang <huangyh@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-fpga.dts
+++ b/arch/arm64/boot/dts/pxa1936-fpga.dts
@@ -837,6 +837,12 @@
 		};
 	};
 
+	panel: td043mgea1 {
+		compatible = "marvell,mmp-td043mgea1";
+		marvell,path-name = "mmp_pnpath";
+		status = "okay";
+	};
+
 	gps: mmp-gps {
 		compatible = "marvell,mmp-gps";
 		marvell,gps-eclk-ctrl;
