--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -907,6 +907,12 @@
 			compatible = "marvell,mmp-apb-spare";
 			reg = <0xd4090000 0x154>;
 		};
+
+		dciu: dciu@d1df0000 {
+			compatible = "marvell,mmp-dciu";
+			reg = <0xd1df0000 0x98>;
+		};
+
 	};
 
 	soc_clocks: clocks{
@@ -916,8 +922,9 @@
 		      <0xd4015000 0x1000>,
 		      <0xd403b000 0x1000>,
 		      <0xd4090000 0x1000>,
-		      <0xd4282c00 0x400>;
-		reg-names = "mpmu", "apmu", "apbc", "apbcp", "apbs", "ciu";
+		      <0xd4282c00 0x400>,
+		      <0xd1df0000 0x98>;
+		reg-names = "mpmu", "apmu", "apbc", "apbcp", "apbs", "ciu", "dciu";
 		#clock-cells = <1>;
         };
 
