--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -1283,8 +1283,11 @@
 	mmp_m3_1: apsenhb {
 		compatible = "marvell,mmp-m3";
 		pmicver = <2>;
+		/* 950000 for CM3 on, 800000 for CM3 off */
+		vccmain = <950000 800000>;
 		vm3pwr-supply = <&ldo3>;
 		antpwr-supply = <&ldo9>;
+		vccmain-supply = <&buck1a>;
 
 		pinctrl-names = "default", "poweron";
 		pinctrl-0 = <&gnss_pmx_def>;
@@ -1295,9 +1298,12 @@
 	mmp_m3_2: cm3senhb {
 		compatible = "marvell,mmp-m3";
 		pmicver = <2>;
+		/* 950000 for CM3 on, 800000 for CM3 off */
+		vccmain = <950000 800000>;
 		vm3pwr-supply = <&ldo3>;
 		antpwr-supply = <&ldo9>;
 		senpwr-supply = <&ldo18>;
+		vccmain-supply = <&buck1a>;
 
 		pinctrl-names = "default", "poweron";
 		pinctrl-0 = <&gnss_pmx_def &twsi3_pmx_senhb_def &senhb_irq_pins_def>;
