--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -365,14 +365,27 @@
 			};
 
 			thermal: thermal@d4013300 {
-				/* A cooling path is defined with the increased num */
-				/* 4core 3core 2core 1core */
-				core-p0 = <0 0 0 0  /* 2.0G */
-					   1 0 0 0  /* 1.8G */
-					   2 0 0 0  /* 1.5G */
-					   3 0 0 0>;/* 1.2G */
-				/* 1.2G * 2 core cooling state */
-				thermal_safe-p0 = <3 2>;
+				/*
+				    One line indicate for one cooling state
+				    first column for cpufreq constraint,
+				    second column for hotplug constraint.
+				    example:
+					core-p0 = <1 0
+						   3 0>;
+				    means: when temp get higher, apply 4 * 1.5G -> 4 * 1.2G
+					when temp get more higher, apply 4 * 1.2G -> 4 * 0.8G
+				    From SV model, supported cooling state is as below:
+					<1 0	<0 2	<1 0	<0 2
+					 3 0>	 3 0>	 2 2>	 2 2>
+
+				*/
+				core-p0 = <1 0
+					   3 0>;
+				/*
+				    thermal safe 624M *4 or 800M * 2, thus supported
+				    <4 0> <3 2>
+				*/
+				thermal_safe-p0 = <4 0>;
 				status = "okay";
 			};
 
