arm64: dts: pxa1908: add touch 88ms100 support on ulc1
Add touch 88ms100 device node in ulc1 dts.

Change-Id: I1d939af587a8833d806c761ac51ebe13fa0097b4
Signed-off-by: yanggao <yanggao@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -914,6 +914,19 @@
 					focaltech,reset-gpios = <&gpio 75 0>;
 					focaltech,v_tsp-supply = <&ldo11>;
 				};
+
+				touch3: 88ms100@720p {
+					compatible = "marvell,88ms100-touch";
+					pinctrl-names = "default"; pinctrl-0 = <&touch_pins>;
+					reg = <0x18>;
+					interrupt-parent = <&gpio>;
+					interrupts = <72 0x1>;
+					irq-gpios = <&gpio 72 0>;
+					reset-gpios = <&gpio 75 0>;
+					marvell,max-height = <1280>;
+					marvell,max-width = <720>;
+					avdd-supply = <&ldo11>;
+				};
 			};
 
 			twsi2: i2c@d4037000 {
