arm64: dts: pxa1936: pass wib_1v8 to sd8x_rfkill
So that the driver can en/dis regulator sleep mode.

Note:
wib_1V8 shares the BUCK2 with other modules, if other module
need to block the buck enter to sleep mode, now it can not be
supported well.

Change-Id: Idbfb56dd979ea1f210ff64197f6083b8ff87f513
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -1236,6 +1236,7 @@
 		pd-gpio = <&gpio 97 0>;
 		rst-gpio = <&gpio 71 0>;
 		wib_3v3-supply = <&ldo15>;
+		wib_1v8-supply = <&buck2>;
 		edge-wakeup-gpio = <&gpio 39 0>;
 		status = "okay";
 	};
