--- a/arch/arm64/boot/dts/pxa1936-qt.dts
+++ b/arch/arm64/boot/dts/pxa1936-qt.dts
@@ -30,6 +30,10 @@
 	};
 
 	soc {
+		devfreq-ddr {
+			status = "okay";
+		};
+
 		pd_display: pd_display@0xd4282800 {
 			compatible = "marvell,power-domain-display-pxa1u88";
 			reg = <0xd4282800 0x1000>;
