--- a/arch/arm64/boot/dts/88pm860.dtsi
+++ b/arch/arm64/boot/dts/88pm860.dtsi
@@ -12,6 +12,8 @@
 		buck6: BUCK6 {PM8XX_BUCK6;};
 		buck1b: BUCK1B {PM8XX_BUCK1B;};
 
+		ldo3: LDO3 {PM86X_LDO3;};
+		ldo13: LDO13 {PM86X_LDO13;};
 		ldo15: LDO15 {PM8XX_LDO15;};
 		ldo16: LDO16 {PM8XX_LDO16;};
 		ldo17: LDO17 {PM8XX_LDO17;};
