arm64: dts: add onkey related setting for pxa1936 DKB
add setting for 88pm860 onkey:
1. hardware reset type: just reset
2. long onkey: power down

Change-Id: Idff20cd6a180b2bcf5dffb1b8ec84beeba5a40f7
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -896,6 +896,10 @@
 
 					onkey {
 						onkey-gpio-number = <0>;
+						/* hardware reset: just reset */
+						hw-rst-type = <1>;
+						/* long onkey: power down */
+						long-onkey-type = <1>;
 					};
 
 					vbus {
