input: touchscreen: enable focaltech ft6206 panel
enable focaltech ft6206 panel, add Kconfig and Makefile

Change-Id: I3a68377764c6e3af2909c55d8e989f266949e718
Signed-off-by: Andy Luo <yifeiluo@marvell.com>
Signed-off-by: Allen Yue <allenyue@marvell.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -969,6 +969,17 @@ config TOUCHSCREEN_MSG2138
 	  To compile this driver as a module, choose M here: the
 	  module will be called msg2138.
 
+config TOUCHSCREEN_FT6206
+	tristate "FT6206 touchscreen driver"
+	depends on I2C
+	help
+	  Say Y here if enable support for the FT6206 touchscreen controller.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called ft6206_ts.
+
 config TOUCHSCREEN_SUR40
 	tristate "Samsung SUR40 (Surface 2.0/PixelSense) touchscreen"
 	depends on USB
