arm64: dts: pxa1936: enable audio components
Enable audio for pxa1936 dkb.

Change-Id: I10971ab7ddfad03224140e509c17e34257d36d4b
Signed-off-by: Leilei Shang <shangll@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -1020,7 +1020,7 @@
 			map: map@d1200000 {
 				marvell,b0_fix;
 				marvell,apll = <0>;
-				status = "disabled";
+				status = "okay";
 				mmp_map_codec: mmp_map_codec {
 					compatible = "marvell,mmp-map-codec";
 					#dailink-cells = <1>;
@@ -1081,7 +1081,6 @@
 
 	sound {
 		compatible = "marvell,map-card";
-		status = "disabled";
 		map,dapm-route =
 			"ADC input1", "TDM_MIC1_CAP",
 			"ADC input2", "TDM_MIC2_CAP",
