--- a/drivers/media/i2c/b52_camera/Kconfig
+++ b/drivers/media/i2c/b52_camera/Kconfig
@@ -35,3 +35,9 @@ config B52_CAMERA_SR544
        depends on VIDEO_MMPISP_B52 && I2C
        help
 	This is a V4L2 camera driver for the sr544 sensor
+
+config B52_CAMERA_HI551
+       tristate "HI551 camera support"
+       depends on VIDEO_MMPISP_B52 && I2C
+       help
+	This is a V4L2 camera driver for the hi551 sensor
