marvell: telephony: cp_load: move remap smc func id to dts
as different platform may have different func id value, move it to dts
to keep cp_load code unified

e.g.
pxa1908: 0xd0002001
pxa1936: 0xc2003000

Change-Id: If9059a4fa31ac8a8c3e405239d364f0164bbd4fb
Signed-off-by: Wei Shu <weishu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -867,6 +867,7 @@
 				compatible = "marvell,cp_load";
 				cp-type = <3>; /* pxa1908 */
 				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
+				remap-smc-funcid = <0xc2003000>;
 				status = "disabled";
 			};
 		};
