--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1655,6 +1655,14 @@ config SENSORS_MC3XXX
 
 	  To compile this driver as a module, choose M here.
 
+config SENSORS_LTR558_I2C
+	tristate "LTR 558 proximity device with I2C bus"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you have a ltr558 and ltr553  device on the board and use I2C
+	  communication, else say N.
+
 if ACPI
 
 comment "ACPI drivers"
