hwmon: epl2182: add epl2182 in Makefile and Kconfig.
epl2182 is a proximity and light sensor from ELAN company.

Change-Id: Ibf793ce0dea3e8045992b8c9fa95d3280728dc74
Signed-off-by: yanggao <yanggao@marvell.com>

--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1663,6 +1663,16 @@ config SENSORS_LTR558_I2C
 	  Say Y here if you have a ltr558 and ltr553  device on the board and use I2C
 	  communication, else say N.
 
+config SENSOR_EPL2182
+	tristate "EPL 2182 proximity and ambient light sensor"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you have a epl2182 device on the board and use I2C
+	  communication, else say N.
+
+	  To compile this driver as a module, choose M here.
+
 if ACPI
 
 comment "ACPI drivers"
